--- a/examples/Lecture29/after/css/styles.css
+++ b/examples/Lecture29/after/css/styles.css
@@ -4,3 +4,47 @@ body {
   background-color: #61122f;
   font-family: 'Oxygen', sans-serif;
 }
+
+/**HEADER**/
+#header-nav {
+  background-color: #f6b319;
+  border-radius: 0;
+  border: 0;
+}
+
+#logo-img {
+  background: url('../images/logo.png') no-repeat;
+  width: 150px;
+  height: 150px;
+  margin: 10px 15px 10px 0;
+}
+
+.navbar-brand {
+  padding: 25px;
+}
+
+.navbar-brand h1 {
+  font-family: 'Lora', serif;
+  color: #000033;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  font-weight: bolder;
+  line-height: 0.75;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.navbar-brand a:hover, .navbar-brand a:focus {
+  text-decoration: none;
+}
+
+.navbar-brand p {
+  color: 000;
+  text-transform: uppercase;
+  font-size: .7em;
+  margin-top: 15px;
+}
+
+.navbar-brand p span {
+  vertical-align: middle;
+}
