--- a/examples/Lecture29/after/css/styles.css
+++ b/examples/Lecture29/after/css/styles.css
@@ -1,3 +1,6 @@
+* {
+}
+
 body {
   font-size: 16px;
   color: #fff;
@@ -14,9 +17,11 @@ body {
 
 #logo-img {
   background: url('../images/logo.png') no-repeat;
-  width: 150px;
-  height: 150px;
+  background-color: blue;
+  width: 120px;
+  height: 100px;
   margin: 10px 15px 10px 0;
+  padding: 0;
 }
 
 .navbar-brand {
@@ -47,4 +52,212 @@ body {
 
 .navbar-brand p span {
   vertical-align: middle;
+}
+
+#nav-list {
+  margin-top: 10px;
+}
+
+#nav-list a {
+  color: #985434;
+  text-align: center;
+}
+
+#nav-list a:hover {
+  background: #E7E7E7;
+}
+
+#nav-list a span {
+  font-size: 1.8em;
+}
+
+#phone {
+  margin-top: 5px;
+}
+
+#phone a {
+  text-align: right;
+  padding-bottom: 0;
+}
+
+#phone div {
+  color: green;
+  text-align: right;
+  padding-right: 15px;
+}
+
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+  border: 1px solid red;
+}
+
+.navbar-header button.navbar-toggle {
+  clear: both;
+  margin-top: -30px;
+}
+
+.panel-footer {
+  margin-top: 30px;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  background-color: #222;
+  border-top: 0;
+}
+
+.panel-footer div.row {
+  margin-bottom: 35px;
+}
+
+#hours, #address {
+  line-height: 2;
+}
+
+#hours > span, #address > span {
+    font-size: 1.3em;
+}
+
+#address p {
+  color: #555555;
+  font-size: .8em;
+  line-height: 1.8;
+}
+
+#testimonials {
+  font-style: italic;
+}
+
+#menu-tile, #specials-tile, #map-tile {
+  height: 250px;
+  width: 100%;
+  margin-bottom: 15px;
+  position: relative;
+  border: 2px solid #3F0C1F;
+  overflow: hidden;
+}
+
+#menu-tile:hover, #specials-tile:hover, #map-tile:hover {
+  box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#menu-tile {
+  background: url('../images/dog1.png') no-repeat;
+  background-position: center;
+}
+
+#specials-tile {
+ background: url('../images/dog2.jpeg') no-repeat;
+ background-position: center;
+}
+
+#menu-tile span, #specials-tile span, #map-tile span {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 1.6em;
+    text-transform: uppercase;
+    background-color: #000;
+    color: #fff;
+    opacity: .8;
+}
+
+@media ( min-width: 1200px ) {
+  .jumbotron {
+    background: url('../images/Screen.png') no-repeat;
+    height: 675px;
+    box-shadow: 0 0 50px #3F0C32;
+    border: 2px solid #3F0C1F;
+  }
+}
+
+@media ( min-width: 992px ) and ( max-width: 1199px ) {
+  #logo-img {
+    background: url('../images/logo.png') no-repeat;
+    background-color: blue;
+    width: 70px;
+    height: 100px;
+    margin: 5px 5px 5px 0;
+    padding: 0;
+  }
+
+  .jumbotron {
+    background: url('../images/Screen.png') no-repeat;
+    height: 558px;
+    box-shadow: 0 0 50px #3F0C32;
+    border: 1px solid #3F0C1F;
+  }
+
+}
+
+@media ( min-width: 768px ) and ( max-width: 991px ) {
+    .jumbotron {
+      background: url('../images/Screen.png') no-repeat;
+      height: 432px;
+      box-shadow: 0 0 50px #3F0C32;
+      border: 1px solid #3F0C1F;
+    }
+}
+
+@media ( max-width: 767px ) {
+  .navbar-brand {
+    padding-top: 10px;
+    height: 80px;
+  }
+
+  .navbar-brand h1 {
+    padding-top: 10px;
+    font-size: 5vw;
+  }
+
+  .navbar-brand p {
+    text-transform: uppercase;
+    font-size: .6em;
+    margin-top: 12px;
+  }
+
+  .navbar-brand p img {
+    height: 20px;
+  }
+
+  #collapsable-nav a {
+    font-size: 1.2em;
+  }
+
+
+  #collapsable-nav a span {
+    font-size: 1em;
+    margin-right: 5px;
+  }
+
+.panel-footer section {
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.panel-footer section:nth-child(3) {
+  margin-bottom: 0;
+}
+
+.panel-footer section hr {
+  width: 50%;
+}
+
+.container  .jumbotron {
+    margin-top: 30px;
+    padding: 0;
+    box-shadow: 0 0 50px #3F0C32;
+    border: 2px solid #3F0C1F;
+  }
+
+  #menu-tile, #specials-tile {
+    width: 360px;
+    margin: 0 auto 15px;
+  }
+}
+
+@media ( max-width: 479px ) {
+  #menu-tile, #specials-tile {
+    width: 280px;
+    margin: 0 auto 15px;
+  }
 }
